tests/specs/graph/fast_check/issue_22829.txt
# https://jsr.io/@scope/a/meta.json
{"versions": { "1.0.0": {} } }

# https://jsr.io/@scope/a/1.0.0_meta.json
{ "exports": { ".": "./mod.ts" } }

# https://jsr.io/@scope/a/1.0.0/functions.ts
abstract class Internal<T> {
  prop: T;
}
function func() {
}
export function other_func() {
}

export const functions = {
  func,
  other: other_func,
};
export declare module functions {
  type Function<T> = Internal<T>;
}

# https://jsr.io/@scope/a/1.0.0/mod.ts
import { functions } from "./functions.ts";

export type Test = functions.Function;

export { functions } from "./functions.ts";

# mod.ts
import 'jsr:@scope/a'

# output
{
  "roots": [
    "file:///mod.ts"
  ],
  "modules": [
    {
      "kind": "esm",
      "dependencies": [
        {
          "specifier": "jsr:@scope/a",
          "code": {
            "specifier": "jsr:@scope/a",
            "span": {
              "start": {
                "line": 0,
                "character": 7
              },
              "end": {
                "line": 0,
                "character": 21
              }
            }
          }
        }
      ],
      "size": 22,
      "mediaType": "TypeScript",
      "specifier": "file:///mod.ts"
    },
    {
      "kind": "esm",
      "size": 225,
      "mediaType": "TypeScript",
      "specifier": "https://jsr.io/@scope/a/1.0.0/functions.ts"
    },
    {
      "kind": "esm",
      "dependencies": [
        {
          "specifier": "./functions.ts",
          "code": {
            "specifier": "https://jsr.io/@scope/a/1.0.0/functions.ts",
            "span": {
              "start": {
                "line": 0,
                "character": 26
              },
              "end": {
                "line": 0,
                "character": 42
              }
            }
          }
        }
      ],
      "size": 129,
      "mediaType": "TypeScript",
      "specifier": "https://jsr.io/@scope/a/1.0.0/mod.ts"
    }
  ],
  "redirects": {
    "jsr:@scope/a": "https://jsr.io/@scope/a/1.0.0/mod.ts"
  },
  "packages": {
    "@scope/a": "@scope/a@1.0.0"
  }
}

Fast check https://jsr.io/@scope/a/1.0.0/mod.ts:
  error[unknown-var-type]: unknown type for variable in the public API
    --> https://jsr.io/@scope/a/1.0.0/functions.ts:9:14
     |
   9 | export const functions = {
     |              ^^^^^^^^^ this variable's type could not be inferred because its initializer
     |
  10 |   func,
     |   ---- contains this shorthand property, which can not be inferred
     |
     = hint: add an explicit type annotation to the variable declaration

    info: all variables in the public API must have a known type
    info: shorthand properties can not be inferred because the type of the value referred to by the shorthand property is not known without a type checker
    docs: https://jsr.io/go/slow-type-unknown-var-type

